# circuit_analysis

./: README.md
project1/: .gitignore  report.tex
project1/benchmark/: Bus_l12s16.sp  Test_0.sp  Tree_l7.sp
project1/doc/: hw1.aux  hw1.bcf  hw1.run.xml  hw1.tex  hw1.toc
project1/output/: Bus_l12s16_zero.txt  RLC_s3_sub_matrix.txt  RLC_s3_zero.txt  Test_0_full.txt  Test_0_sparse.txt  Test_0_sub_matrix.txt  Test_0_zero.txt  Tree_l7_sparse.txt  read_matrix.mlx
project1/src/: CMakeLists.txt  cap.hpp  device.hpp  ind.hpp  isrc.hpp  main.cpp  mat.hpp  mut.hpp  res.hpp  stamp.hpp  test.mlx  util.hpp  vsrc.hpp
project1/src/db/: cap.hpp  cccs.hpp  ccvs.hpp  ctrlsrc.hpp  db.hpp  device.hpp  ind.hpp  isrc.hpp  mut.hpp  res.hpp  subckt.hpp  vccs.hpp  vcvs.hpp  vsrc.hpp
project1/src/output/: Bus_l12s16_sparse.txt  RLC_s3.txt  RLC_s3_sparse.txt
project1/src/utils/: log.hpp  mat.hpp  timer.hpp  util.hpp
project3-5/Benchmark/: BackwardEuler.m  GCR.m  GenerateSrc.m  Golden.m  RLC_p3.ic0  RLC_p3.lis  RLC_p3.sp  RLC_p3.st0  RLC_p3_BE_GCR.mat  RLC_s3.ic0  RLC_s3.lis  RLC_s3.sp  RLC_s3.st0  RLC_s3_BE_GCR.mat  RLC_s3_BE_SOR.mat  RLC_s3_TR_GCR.mat  SOR.m  TrapezoidalRule.m  bus32seg16.ic0  bus32seg16.lis  bus32seg16.st0  bus32seg16_BE_GCR.mat  bus8bit8seg.ic0  bus8bit8seg.lis  bus8bit8seg.st0  bus8bit8seg_TR_GCR.mat  main.m  read_data.cpp  read_data_man.txt  report.m
project3-5/doc/: pj5.aux  pj5.bcf  pj5.run.xml  pj5.synctex(busy)  pj5.tex  pj5.toc
project3-5/src/: BackwardEuler.asv  BackwardEuler.m  GCR.asv  GCR.m  GenerateSrc.m  Golden.m  RLC_p3.ic0  RLC_p3.mat  SOR.asv  (+22 more)
(+46 files in other folders)
